--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "E:\\Python\\python.exe"
+    "python.pythonPath": "E:\\Python\\python.exe",
+    "files.autoGuessEncoding": true
     "python.linting.pylintArgs": ["--generate-members"]
 }
